--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>  
 <body>  
     <h1>Chào</h1>  
-    <p>Tôi là Hoài Anh (aka Thur)</p>  
-    <img src="images/my-image.jpg" alt="Miêu tả hình ảnh">  
+    <p>Tôi là Hoài Anh (aka Thuriminese)</p>  
+    <img src="images/my-image.jpg" alt="Tôi này">  
 </body>  
 </html>
